--- a/TaskOperations/TaskOperations.csproj
+++ b/TaskOperations/TaskOperations.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>93c3c7eb-0acf-4a54-a9f6-2005d52b4217</ProjectGuid>
+    <ProjectGuid>{55563EC1-6E11-4691-ADDA-1F4937260587}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TaskOperations</RootNamespace>
@@ -41,8 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContinueWhenAll.cs" />
+    <Compile Include="ContinueWhenAny.cs" />
+    <Compile Include="ContinueWith.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReturnValue.cs" />
+    <Compile Include="Wait.cs" />
+    <Compile Include="WaitAll.cs" />
+    <Compile Include="WaitAllOneByOne.cs" />
+    <Compile Include="WaitAny.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
